style: fixed squished preview collapsibles

--- a/src/Forms/ImportPreviewForm/PackagePreview/PackagePreview.scss
+++ b/src/Forms/ImportPreviewForm/PackagePreview/PackagePreview.scss
@@ -23,6 +23,11 @@
         display: flex;
       }
     }
+
+    .group-detail {
+      width: 90%;
+      margin: 0 auto;
+    }
   }
 
   .submit-btn {
